Add comments. Move AdvisableAgent, BasicWalkAgent, PlayerAgent into sub-packages. Fix bug in samus shot code where shot is disposed twice.